Version 4.46 - 26 March 2013, by Per Øyvind Karlsen

- fix selecting right DKMS flavor (mga#9172)

Version 4.45 - 18 March 2013, by Per Øyvind Karlsen

- store RPMTAG_PACKAGESIZE in headers
- add an alias to Pkg_files to only list doc files. This avoids pushing more 
  than 50k strings on the stack to check if texmf has a README.urpmi
- implement use of new start & stop callbacks in rpm
- fix calling method in string
  (spotted by perl_checker, introduced in revision mga#267800 ("honour search
   medias when using --auto-select") but teuf on Fri Apr 23 2010
- drop 'direction' parameter in obsoletes_overlap() & provides_overlap()
- add basic support for --downgrade (mga#6655)
- enable to report script & I/O errors
- fix scoring locale packages
- prevent creating empty transactions in rare cases
  (that cause rpm to abort on assert while creating a new pool)
- prevent urpmi from looping forever when some packages are broken
- API: add resolve_requested_suggests
- add URPM::traverse_tag_find() for urpme --env
- fix computing size of added/freed disk space when updating involves removing
  some packages (mga#4427)
- support kernel 3.x in kmod resolution
- prefer package from first medium when same NEVR exists in several media
  (thus prefering 64bit media over 32 bit ones) (mga#7524)

Version 4.44 - 16 March 2013, by Per Øyvind Karlsen

- disable rpmlint for building test package during regression tests
- move out some functions accessing berkeley db API directly into a RPMBDB
  module built together with rpm in order to really guard ourself from
  breakages during new major berkeley db version upgrades
- don't disable strict aliasing

Version 4.43 -  9 June 2012, by Per Øyvind Karlsen

- add a simple detectXZ() function for reading the magic ourself in situations
  where we ie. cannot rely on ie. libmagic

Version 4.42 - 16 May 2012, by Per Øyvind Karlsen

- make URPM::DB::info use berkeley db api rather than using rpmdb functions